[project]
name = "tds-proj1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.11",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "html2text>=2025.4.15",
    "markdown>=3.8",
    "numpy>=2.3.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
]
